@@ -39,7 +39,7 @@ Discovery/Interval to 0), discovery may be forced by calling the discovery
 endpoint manually:
 
 ```
-curl -X POST 0:49999/api/v2/discovery
+curl -X POST 0:59999/api/v2/discovery
 ```
 
 Initially, none of the discovered devices will be added to EdgeX, but by
@@ -47,8 +47,8 @@ using appropriate Provision Watchers they can be accepted. To upload the
 supplied Provision Watchers to core-metadata:
 
 ```
-curl -X POST -d@watcher1.json 0:48081/api/v2/provisionwatcher
-curl -X POST -d@watcher2.json 0:48081/api/v2/provisionwatcher
+curl -X POST -d@watcher1.json 0:59881/api/v2/provisionwatcher
+curl -X POST -d@watcher2.json 0:59881/api/v2/provisionwatcher
 ```
 
 The Provision Watchers each match one of the discovered devices. They work by
