@@ -2,6 +2,7 @@ This is the C SDK for EdgeX. Its API is based largely on the Go SDK.
 
 Changes for 2.0.0 "Ireland":
 
+- Ports for EdgeX microservices are re-assigned, eg device services move from 499xx to 599xx.
 - Provision Watchers may include AutoEvents to be added on discovered devices.
 - Support event transmission by mqtt or redis streams rather than rest
 - Device definitions for upload no longer supported in configuration. Instead files may be read from a specified directory (as for profiles)
